--- a/generators/GeneratorAPI/build.gradle
+++ b/generators/GeneratorAPI/build.gradle
@@ -5,10 +5,12 @@ buildscript {
     
     dependencies {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "com.github.jengelman.gradle.plugins:shadow:5.0.0"
     }
 }
 
 apply plugin: 'kotlin'
+apply plugin: 'com.github.johnrengelman.shadow'
 apply plugin: 'application'
 
 group 'com.fcp'
@@ -22,6 +24,12 @@ sourceSets {
     test.resources.srcDirs = ['testresources']
 }
 
+shadowJar {
+    archiveBaseName = 'server'
+    archiveClassifier = null
+    archiveVersion = null
+}
+
 repositories {
     mavenLocal()
     jcenter()
@@ -33,9 +41,9 @@ dependencies {
     compile "io.ktor:ktor-server-netty:$ktor_version"
     compile "ch.qos.logback:logback-classic:$logback_version"
     compile "io.ktor:ktor-server-core:$ktor_version"
-    implementation "io.ktor:ktor-client-apache:$ktor_version"
-    implementation "io.ktor:ktor-client-json:$ktor_version"
-    implementation "io.ktor:ktor-client-gson:$ktor_version"
+    compile "io.ktor:ktor-client-apache:$ktor_version"
+    compile "io.ktor:ktor-client-json:$ktor_version"
+    compile "io.ktor:ktor-client-gson:$ktor_version"
     testCompile "io.ktor:ktor-server-tests:$ktor_version"
-    implementation "io.ktor:ktor-gson:$ktor_version"
+    compile "io.ktor:ktor-gson:$ktor_version"
 }
