--- a/generators/GeneratorAPI/resources/application.conf
+++ b/generators/GeneratorAPI/resources/application.conf
@@ -1,8 +1,7 @@
 ktor {
     deployment {
-        host = "localhost"
+        host = "0.0.0.0"
         port = 8080
-        port = ${?PORT}
         watch = [ com.fcp ]
     }
     application {
