--- a/orchestrator/build.gradle
+++ b/orchestrator/build.gradle
@@ -5,11 +5,13 @@ buildscript {
     
     dependencies {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "org.jetbrains.kotlin:kotlin-serialization:$kotlin_version"
     }
 }
 
 apply plugin: 'kotlin'
 apply plugin: 'application'
+apply plugin: 'kotlinx-serialization'
 
 group 'com.example'
 version '0.0.1'
@@ -35,5 +37,7 @@ dependencies {
     compile "io.ktor:ktor-client-core:$ktor_version"
     compile "io.ktor:ktor-client-core-jvm:$ktor_version"
     compile "io.ktor:ktor-client-apache:$ktor_version"
+    compile "io.ktor:ktor-gson:$ktor_version"
+    compile "org.jetbrains.kotlinx:kotlinx-serialization-runtime:0.14.0"
     testCompile "io.ktor:ktor-server-tests:$ktor_version"
 }
