--- a/orchestrator/build.gradle
+++ b/orchestrator/build.gradle
@@ -5,17 +5,20 @@ buildscript {
     
     dependencies {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "com.github.jengelman.gradle.plugins:shadow:5.0.0"
         classpath "org.jetbrains.kotlin:kotlin-serialization:$kotlin_version"
     }
 }
 
 apply plugin: 'kotlin'
+apply plugin: 'com.github.johnrengelman.shadow'
 apply plugin: 'application'
 apply plugin: 'kotlinx-serialization'
 
-group 'com.example'
+group 'com.fcp'
 version '0.0.1'
 mainClassName = "io.ktor.server.netty.EngineMain"
+
 
 sourceSets {
     main.kotlin.srcDirs = main.java.srcDirs = ['src']
@@ -24,6 +27,11 @@ sourceSets {
     test.resources.srcDirs = ['testresources']
 }
 
+shadowJar {
+    archiveBaseName = 'orchestrator'
+    archiveClassifier = null
+    archiveVersion = null
+}
 repositories {
     mavenLocal()
     jcenter()
