--- a/generators/GeneratorAPI/build.gradle
+++ b/generators/GeneratorAPI/build.gradle
@@ -31,7 +31,7 @@ sourceSets {
 }
 
 shadowJar {
-    archiveBaseName = 'server'
+    archiveBaseName = 'generators'
     archiveClassifier = null
     archiveVersion = null
 }
