--- a/orchestrator/build.gradle
+++ b/orchestrator/build.gradle
@@ -49,5 +49,8 @@ dependencies {
     compile "io.ktor:ktor-client-gson:$ktor_version"
     compile "io.ktor:ktor-gson:$ktor_version"
     compile "org.jetbrains.kotlinx:kotlinx-serialization-runtime:0.14.0"
+    compile "com.fasterxml.jackson.core:jackson-databind:2.10.+"
+    compile "com.fasterxml.jackson.module:jackson-module-kotlin:2.10.+"
+    compile "com.fasterxml.jackson.dataformat:jackson-dataformat-yaml:2.10.+"
     testCompile "io.ktor:ktor-server-tests:$ktor_version"
 }
