--- a/generators/GeneratorAPI/Dockerfile
+++ b/generators/GeneratorAPI/Dockerfile
@@ -11,4 +11,4 @@ USER $APPLICATION_USER
 COPY ./build/libs/generators*.jar /app/generators.jar
 WORKDIR /app
 
-CMD ["java", "-server", "-XX:+UnlockExperimentalVMOptions", "-XX:+UseCGroupMemoryLimitForHeap", "-XX:InitialRAMFraction=2", "-XX:MinRAMFraction=2", "-XX:MaxRAMFraction=2", "-XX:+UseG1GC", "-XX:MaxGCPauseMillis=100", "-XX:+UseStringDeduplication", "-jar", "generators.jar"]
+ENTRYPOINT ["java", "-server", "-XX:MaxRAMPercentage=75.00", "-jar", "generators.jar"]
